resolve misnamed file imports

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <button class="control-button" id="save-to-image"><i class="fas fa-folder-arrow-down"></i>Download</button>
     </div>
 
-    <script src="scripts/filesaver.min.js"></script>
+    <script src="scripts/FileSaver.min.js"></script>
     <script src="scripts/dom-to-image.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
